# OPTIMEO

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  Home.py  LICENSE  README.md  joss_functionality_verification.py  joss_review_completion.md  makedocs.sh  pyproject.toml  requirements.txt  run.py  setup.py  test.ipynb
.github/: copilot-instructions.md
.github/workflows/: build-docs.yml  copilot-setup-steps.yml  generate_docs.yml  python-app.yml
docs/: conf.py  index.html  optimeo.html  search.js
docs/optimeo/: analysis.html  bo.html  doe.html
docs/source/: index.rst
notebooks/: MLanalysis.ipynb  _quarto.yml  bo.ipynb  dataML.csv  doe.ipynb  experimental_data.csv  experimental_data2.csv
optima/: __init__.py  bo.py
optima.egg-info/: PKG-INFO  SOURCES.txt
optimeo/: __init__.py  analysis.py  bo.py  doe.py
optimeo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pages/: 1_1._Design_Of_Experiments.py  2_2._Bayesian_Optimization.py  2_2._New_experiments:_Bayesian_Optim..py  2_2._New_set_of_experiments:_Genetic_Alg..py  3_3._Data_Analysis_and_Modeling.py  3_3._Final optimization:_Bayesian_Optim..py  4_4._Data_Analysis_and_Modeling.py  about.md  about_app.md  help-doe.md
paper/: paper.bib  paper.html  paper.md
resources/: functions.py
ressources/: bo.py  bo_test.ipynb  functions.py  style.css
tests/: test_analysis.py  test_bo.py  test_doe.py
tests/data/: dataML.csv
